Nice display page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root"></div>
     <script src="./flapjax.js"></script>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/src/index.solid.tsx"></script>
   </body>
 </html>
