--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/styles/index.css" rel="stylesheet" type="text/css" />    
+    <link href="./styles/index.css" rel="stylesheet" type="text/css" />    
   </head>
   <body>
     <div id="root"></div>
-    <script src="./flapjax.js"></script>
-    <script type="module" src="/src/index.solid.tsx"></script>
+    <script src="flapjax.js"></script>
+    <script type="module" src="./src/index.solid.tsx"></script>
   </body>
 </html>
